--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,8 +138,8 @@ ul, ol {
 }
 
 .logo-icon {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   transition: var(--transition-normal);
 }
 
@@ -250,6 +250,13 @@ ul, ol {
 
 .lang-btn:hover:not(.active) {
   color: var(--primary-green);
+}
+
+/* Phone numbers need LTR rendering even inside RTL blocks */
+.phone-number {
+  direction: ltr;
+  unicode-bidi: embed;
+  display: inline-block;
 }
 
 /* Mobile Menu */
